@@ -1,6 +1,9 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  20 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: removed stray
+  "DEBUG:" output, closing bug #6732.
+
 *portage-2.0.29 (18 Aug 2002)
 
   18 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge, portage.py,
